# topologicalimpurity

./: .gitignore  README.md  pyproject.toml  setup.sh
benchmark/: benchmark.py  benchmark_dili_tdc_tdt.py  benchmark_dili_tdc_tdt_result.csv  benchmark_dili_tdc_trf.py  benchmark_dili_tdc_trf_result.csv  benchmark_one.py  benchmark_one_rf.py  benchmark_one_tdc.py  benchmark_one_tdc_rf.py  benchmark_rf.py  benchmark_simpd_tdt.py  benchmark_simpd_tdt_result.csv  benchmark_simpd_trf.py  benchmark_simpd_trf_result.csv  benchmark_tdc.py  benchmark_tdc_tdt.py  benchmark_tdc_trf.py  clf.joblib  dili.joblib  results_rf_one.csv  results_tree.csv  results_tree_one.csv  results_tree_without_minlength.csv  tdc_adme_results_tree_one_rf.csv  tdc_one_adme_results_tree.csv
notebook/: TI.ipynb  analogue_split.ipynb  benchmark_plot.ipynb  dili.ipynb  dili_tdt.ipynb  dili_trf.ipynb  plot.ipynb  results_simpd_eval.joblib  stats.csv  tdt_simpd.ipynb  trf_simpd.ipynb
src/: benchmark.py  benchmark_cy.py  benchmark_one.py  benchmark_one_rf.py  benchmark_rf.py  ensamble.py  ensamble.pyx  metrics_results.csv  setup.py  tdt.py  tree.c  tree.py  tree.pyx
test/: test_adaboost.py  test_simpd_tdt.py  test_simpd_trf.py  test_topo_adaboost.py
topotree/: __init__.py  ensemble.py  setup.py  tree.c  tree.pyx
