[tool.poetry]
name = "topoinfogain"
version = "0.1.0"
description = ""
authors = ["Manas Mahale <manas.mahale2002@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
networkx = "^3.2.1"
rdkit = "^2023.9.5"
matplotlib = "^3.8.4"
loguru = "^0.7.2"
tqdm = "^4.66.2"
seaborn = "^0.13.2"
molecularnetwork = "^0.4.1"
ipykernel = "^6.29.4"
plotnine = "^0.13.4"
pydot = "^2.0.0"
graphviz = "^0.20.3"
numba = "^0.59.1"
cython = "^3.0.10"
pqdm = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
